cleanup: remove unnecessary files and folders
- Remove backup/ folder with old media files
- Remove backup_media/ and optimized/ folders
- Remove Next.js build artifacts (out/, node_modules/)
- Remove demo files (*-demo.html, layout_snippet.html)
- Remove development scripts and documentation
- Remove debug files and temporary files
- Update .gitignore to prevent future commits of these files

Web is now clean and ready for Vercel deployment
Only essential files remain for static website + Vercel functions

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,19 @@ jspm_packages/
 
 # TernJS port file
 .tern-port
+
+# Backup and temporary files
+backup/
+backup_media/
+optimized/
+*-demo.html
+layout_snippet.html
+optimize_media.sh
+patch-example.diff
+media-replace-snippets.md
+README_OPTIMIZE.md
+README_hotfix.txt
+theme_debug.js
+translations_cz_en.csv
+next-env.d.ts
+package-lock.json
