--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     { "src": "api/**/*.js", "use": "@vercel/node" },
     { "src": "**/*.html", "use": "@vercel/static" },
     { "src": "**/*.css", "use": "@vercel/static" },
-    { "src": "**/*.js", "use": "@vercel/static", "ignore": ["api/**"] },
+    { "src": "**/*.js", "use": "@vercel/static" },
     { "src": "**/*.{png,jpg,jpeg,webp,svg,mp4,webm,woff,woff2,ttf,eot}", "use": "@vercel/static" }
   ],
   "routes": [
