--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,7 @@
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*\\.(css|js|png|jpg|jpeg|webp|svg|mp4|webm|woff|woff2|ttf|eot))", "dest": "/$1" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
