--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,12 @@
     { "src": "api/**/*.js", "use": "@vercel/node" },
     { "src": "**/*.html", "use": "@vercel/static" },
     { "src": "**/*.css", "use": "@vercel/static" },
+    { "src": "**/*.json", "use": "@vercel/static" },
     { "src": "**/*.js", "use": "@vercel/static" },
     { "src": "**/*.{png,jpg,jpeg,webp,svg,mp4,webm,woff,woff2,ttf,eot}", "use": "@vercel/static" }
   ],
   "routes": [
+    { "handle": "filesystem" },
     { "src": "/api/(.*)", "dest": "/api/$1" },
     { "src": "/(.*\\.(css|js|png|jpg|jpeg|webp|svg|mp4|webm|woff|woff2|ttf|eot))", "dest": "/$1" },
     { "src": "/(.*)", "dest": "/index.html" }
