--- a/vercel.json
+++ b/vercel.json
@@ -9,9 +9,9 @@
     { "src": "**/*.{png,jpg,jpeg,webp,svg,mp4,webm,woff,woff2,ttf,eot}", "use": "@vercel/static" }
   ],
   "routes": [
-    { "handle": "filesystem" },
     { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/(.*\\.(css|js|png|jpg|jpeg|webp|svg|mp4|webm|woff|woff2|ttf|eot))", "dest": "/$1" },
+    { "handle": "filesystem" },
+    { "src": "/(.*\\.(css|js|png|jpg|jpeg|webp|svg|mp4|webm|woff|woff2|ttf|eot|json))", "dest": "/$1" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
