revert(static-js): serve frontend .js as static again; API still built from api/**

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
     { "src": "**/*.html", "use": "@vercel/static" },
     { "src": "**/*.css", "use": "@vercel/static" },
     { "src": "**/*.json", "use": "@vercel/static" },
+    { "src": "**/*.js", "use": "@vercel/static" },
     { "src": "**/*.{png,jpg,jpeg,webp,svg,mp4,webm,woff,woff2,ttf,eot}", "use": "@vercel/static" }
   ],
   "routes": [
