fix(vercel): explicitly map api/send-brief.js as Node function; remove static *.js build

--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,11 @@
     { "src": "**/*.html", "use": "@vercel/static" },
     { "src": "**/*.css", "use": "@vercel/static" },
     { "src": "**/*.json", "use": "@vercel/static" },
-    { "src": "**/*.js", "use": "@vercel/static" },
     { "src": "**/*.{png,jpg,jpeg,webp,svg,mp4,webm,woff,woff2,ttf,eot}", "use": "@vercel/static" }
   ],
+  "functions": {
+    "api/send-brief.js": { "runtime": "nodejs18.x" }
+  },
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
     { "handle": "filesystem" },
