fix(api): route /api/send-brief -> /api/send-brief.js and add client fallback from /api/send-brief to /api/send-brief.js

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,7 @@
     "api/send-brief.js": { "runtime": "nodejs18.x" }
   },
   "routes": [
+    { "src": "/api/send-brief", "dest": "/api/send-brief.js", "methods": ["GET", "POST", "OPTIONS"] },
     { "src": "/api/(.*)", "dest": "/api/$1" },
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/index.html" }
