chore(vercel): set no-store for brief_form.js to bust caches; confirm /api/send-brief alias

--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,14 @@
     { "src": "/api/(.*)", "dest": "/api/$1" },
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/index.html" }
+  ],
+  "headers": [
+    {
+      "source": "/brief_form.js",
+      "headers": [
+        { "key": "Cache-Control", "value": "no-store" }
+      ]
+    }
   ]
 }
 
