--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,7 @@
   "routes": [
     { "src": "/api/send-brief", "dest": "/api/send-brief.js" },
     { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "^/$", "dest": "/intro.html" },
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
