feat(admin): integrate Supabase auth UI and docs; fallback status API; protect /admin via serverless

--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,7 @@
   ],
   "routes": [
     { "src": "/api/send-brief", "dest": "/api/send-brief.js" },
+    { "src": "/admin(\.html)?", "dest": "/api/admin.js" },
     { "src": "/api/(.*)", "dest": "/api/$1" },
     { "src": "^/$", "dest": "/intro.html" },
     { "handle": "filesystem" },
